--- a/index.html
+++ b/index.html
@@ -200,11 +200,33 @@
                             <!-- modals -->
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="btn font-bold text-[#F85559] bg-transparent"
-                                onclick="my_modal_5.showModal()">Details</button>
-                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                onclick="my_modal_1.showModal()">Details</button>
+                            <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
-                                    <h3 class="font-bold text-lg">Hello!</h3>
-                                    <p class="py-4">Press ESC key or click the button below to close</p>
+                                    <div class="flex justify-center">
+                                        <img src="./images/fruit6.png" alt="Apples">
+                                    </div>
+                                    <h3 class="font-bold text-4xl font-extrabold">Apples</h3>
+                                    <p class="py-4 text-base w-64 mx-auto font-medium">Professional employees are there
+                                        for you to
+                                        pick the most amazing and fresh fruits.</p>
+                                    <!-- ratings -->
+
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div>
+                                        <button
+                                            class="btn bg-common-color text-white hover:bg-gray-500 duration-">Close</button>
+                                        <button class="btn bg-common-color text-white hover:bg-gray-500 duration-">Buy
+                                            Now</button>
+                                    </div>
+
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn">Close</button>
@@ -237,11 +259,32 @@
                             <!-- modals -->
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="btn font-bold text-[#F85559] bg-transparent"
-                                onclick="my_modal_5.showModal()">Details</button>
-                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                onclick="my_modal_2.showModal()">Details</button>
+                            <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
-                                    <h3 class="font-bold text-lg">Hello!</h3>
-                                    <p class="py-4">Press ESC key or click the button below to close</p>
+                                    <div class="flex justify-center">
+                                        <img src="./images/fruit7.png" alt="Orange">
+                                    </div>
+
+                                    <h3 class="font-bold text-4xl font-extrabold">Orange</h3>
+                                    <p class="py-4 w-52 mx-auto ">Professional employees are there for you to pick the
+                                        most amazing and fresh fruits.</p>
+                                    <!-- ratings -->
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div>
+                                        <button
+                                            class="btn bg-common-color text-white hover:bg-gray-500 duration-">Close</button>
+                                        <button class="btn bg-common-color text-white hover:bg-gray-500 duration-">Buy
+                                            Now</button>
+                                    </div>
+
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn">Close</button>
@@ -266,7 +309,7 @@
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             </div>
                         </div>
@@ -274,11 +317,31 @@
                             <!-- modals -->
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="btn font-bold text-[#F85559] bg-transparent"
-                                onclick="my_modal_5.showModal()">Details</button>
-                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                onclick="my_modal_3.showModal()">Details</button>
+                            <dialog id="my_modal_3" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
-                                    <h3 class="font-bold text-lg">Hello!</h3>
-                                    <p class="py-4">Press ESC key or click the button below to close</p>
+                                    <div class="flex justify-center">
+                                        <img src="./images/fruit8.png" alt="Red Dragon">
+                                    </div>
+
+                                    <h3 class="font-bold text-4xl font-extrabold">Red Dragon</h3>
+                                    <p class="py-4 w-52 mx-auto ">Professional employees are there for you to pick the
+                                        most amazing and fresh fruits.</p>
+                                    <!-- ratings -->
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div>
+                                        <button
+                                            class="btn bg-common-color text-white hover:bg-gray-500 duration-">Close</button>
+                                        <button class="btn bg-common-color text-white hover:bg-gray-500 duration-">Buy
+                                            Now</button>
+                                    </div>
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn">Close</button>
@@ -311,22 +374,41 @@
                             <!-- modals -->
                             <!-- Open the modal using ID.showModal() method -->
                             <button class="btn font-bold text-[#F85559] bg-transparent"
-                                onclick="my_modal_5.showModal()">Details</button>
-                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                onclick="my_modal_4.showModal()">Details</button>
+                            <dialog id="my_modal_4" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box">
-                                    <h3 class="font-bold text-lg">Hello!</h3>
-                                    <p class="py-4">Press ESC key or click the button below to close</p>
-                                    <div class="modal-action">
-                                        <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn">Close</button>
+                                    <div class="flex justify-center">
+                                        <img src="./images/fruit9.png" alt="Banana">
                                     </div>
+
+                                    <h3 class="font-bold text-4xl font-extrabold">Banana</h3>
+                                    <p class="py-4 w-52 mx-auto ">Professional employees are there for you to pick the
+                                        most amazing and fresh fruits.</p>
+                                    <!-- ratings -->
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div>
+                                        <button
+                                            class="btn bg-common-color text-white hover:bg-gray-500 duration-">Close</button>
+                                        <button class="btn bg-common-color text-white hover:bg-gray-500 duration-">Buy
+                                            Now</button>
+                                        <div class="modal-action">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn">Close</button>
+                                        </div>
                                 </form>
                             </dialog>
                         </div>
                     </div>
                 </div>
                 <!-- card 4 end -->
-                
+
 
             </div>
             <!-- btn staart -->
