added team section

--- a/index.html
+++ b/index.html
@@ -421,6 +421,70 @@
             <!-- btn end -->
         </section>
         <!-- card section end -->
+        <!-- teams section start -->
+        <section>
+            <div class="hero min-h-screen bg-gray-500 bg-blend-overlay" style="background-image: url(./images/team.png);">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="my-6">
+                    <h1 class="mb-5 text-5xl font-bold text-white">Meet the team section</h1>
+                    <p class="mb-5 md:w-3/4 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
+                    <div class="flex flex-col justify-evenly md:flex-row">
+                        <!-- team 1 start -->
+                        <div class="rivews m-5  ">
+                            <div class="flex justify-center">
+                                <img src="./images/member1.png" alt="member1">
+                            </div>
+                            <h1 class="text-2xl font-bold">Awlad Hossain</h1>
+                            <p class="font-medium my-2">Fruits Expert</p>
+                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
+                        </div>
+                        <!-- team 1 end -->
+                        <!-- team 2 start -->
+                        <div class="rivews m-5  ">
+                            <div class="flex justify-center">
+                                <img src="./images/member2.png" alt="member1">
+                            </div>
+                            <h1 class="text-2xl font-bold">Safia Chowdhury</h1>
+                            <p class="font-medium my-2">Fruits Expert</p>
+                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
+                        </div>
+                        <!-- team 2 end -->
+                        <!-- team 3 start -->
+                        <div class="rivews m-5 ">
+                            <div class="flex justify-center">
+                                <img src="./images/member3.png" alt="member1">
+                            </div>
+                            <h1 class="text-2xl font-bold">Rokib Hossain</h1>
+                            <p class="font-medium my-2">Fruits Expert</p>
+                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
+                        </div>
+                        <!-- team 3 end -->
+                        <!-- team 4 start -->
+                        <div class="rivews m-5 ">
+                            <div class="flex justify-center">
+                                <img src="./images/member4.png" alt="member1">
+                            </div>
+                            <h1 class="text-2xl font-bold">Chaity</h1>
+                            <p class="font-medium my-2">Fruits Expert</p>
+                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
+                        </div>
+                        <!-- team 4 end -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- teams section end -->
 
 
 
