added footer section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section class="flex md:justify-between flex-col md:flex-row ">
             <!-- section title -->
             <div class="mt-24 mb-11">
-                <h3 class="text-2xl md:text-6xl md:font-extrabold py-5">Deal of the day</h3>
+                <h3 class="text-3xl md:text-6xl md:font-extrabold py-5">Deal of the day</h3>
                 <p class="text-base font-medium md:w-3/5 text-[#121212]">Contrary to popular belief, is not simply
                     random text.
                     It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -423,75 +423,200 @@
         <!-- card section end -->
         <!-- teams section start -->
         <section>
-            <div class="hero min-h-screen bg-gray-500 bg-blend-overlay" style="background-image: url(./images/team.png);">
+            <div class="hero bg-no-repeat bg-cover md:bg-gray-500 bg-blend-overlay"
+                style="background-image: url(./images/team.png);">
                 <div class="hero-overlay bg-opacity-70"></div>
-                <div class="hero-content text-center text-neutral-content">
-                  <div class="my-6">
-                    <h1 class="mb-5 text-5xl font-bold text-white">Meet the team section</h1>
-                    <p class="mb-5 md:w-3/4 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <div class="hero-content md:p-24 text-center text-neutral-content">
+                    <div class="my-6">
+                        <h1 class="mb-5 text-5xl font-bold text-white">Meet the team section</h1>
+                        <p class="mb-5 md:w-3/4 mx-auto">Contrary to popular belief, is not simply random text. It has
+                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        </p>
 
-                    <div class="flex flex-col justify-evenly md:flex-row">
-                        <!-- team 1 start -->
-                        <div class="rivews m-5  ">
-                            <div class="flex justify-center">
-                                <img src="./images/member1.png" alt="member1">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-evenly ">
+                            <!-- team 1 start -->
+                            <div class="rivews ">
+                                <div class="flex justify-center">
+                                    <img src="./images/member1.png" alt="member1">
+                                </div>
+                                <h1 class="text-2xl font-bold">Awlad Hossain</h1>
+                                <p class="font-medium my-2">Fruits Expert</p>
+                                <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                                <a href=""><i
+                                        class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
                             </div>
-                            <h1 class="text-2xl font-bold">Awlad Hossain</h1>
-                            <p class="font-medium my-2">Fruits Expert</p>
-                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
-                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
-                        </div>
-                        <!-- team 1 end -->
-                        <!-- team 2 start -->
-                        <div class="rivews m-5  ">
-                            <div class="flex justify-center">
-                                <img src="./images/member2.png" alt="member1">
+                            <!-- team 1 end -->
+                            <!-- team 2 start -->
+                            <div class="rivews   ">
+                                <div class="flex justify-center">
+                                    <img src="./images/member2.png" alt="member1">
+                                </div>
+                                <h1 class="text-2xl font-bold">Safia Chowdhury</h1>
+                                <p class="font-medium my-2">Fruits Expert</p>
+                                <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                                <a href=""><i
+                                        class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
                             </div>
-                            <h1 class="text-2xl font-bold">Safia Chowdhury</h1>
-                            <p class="font-medium my-2">Fruits Expert</p>
-                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
-                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
-                        </div>
-                        <!-- team 2 end -->
-                        <!-- team 3 start -->
-                        <div class="rivews m-5 ">
-                            <div class="flex justify-center">
-                                <img src="./images/member3.png" alt="member1">
+                            <!-- team 2 end -->
+                            <!-- team 3 start -->
+                            <div class="rivews  ">
+                                <div class="flex justify-center">
+                                    <img src="./images/member3.png" alt="member1">
+                                </div>
+                                <h1 class="text-2xl font-bold">Rokib Hossain</h1>
+                                <p class="font-medium my-2">Fruits Expert</p>
+                                <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                                <a href=""><i
+                                        class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
                             </div>
-                            <h1 class="text-2xl font-bold">Rokib Hossain</h1>
-                            <p class="font-medium my-2">Fruits Expert</p>
-                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
-                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
-                        </div>
-                        <!-- team 3 end -->
-                        <!-- team 4 start -->
-                        <div class="rivews m-5 ">
-                            <div class="flex justify-center">
-                                <img src="./images/member4.png" alt="member1">
+                            <!-- team 3 end -->
+                            <!-- team 4 start -->
+                            <div class="rivews  ">
+                                <div class="flex justify-center">
+                                    <img src="./images/member4.png" alt="member1">
+                                </div>
+                                <h1 class="text-2xl font-bold">Chaity</h1>
+                                <p class="font-medium my-2">Fruits Expert</p>
+                                <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
+                                <a href=""><i
+                                        class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
                             </div>
-                            <h1 class="text-2xl font-bold">Chaity</h1>
-                            <p class="font-medium my-2">Fruits Expert</p>
-                            <a href=""><i class="fa-brands fa-facebook bg-common-color p-2  rounded-full"></i></a>
-                            <a href=""><i class="fa-brands fa-twitter bg-common-color p-2  rounded-full mx-3 "></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin  bg-common-color p-2 rounded-full"></i></a>
+                            <!-- team 4 end -->
                         </div>
-                        <!-- team 4 end -->
                     </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </section>
         <!-- teams section end -->
+        <!-- choose us start -->
+        <section>
+            <div class="text-center mx-auto my-20 ">
+                <h1 class="mb-5 text-5xl font-extrabold text-black">Why Choose Us</h1>
+                <p class="mb-5 md:w-3/6 mx-auto text-base font-medium text-[#121212]">Contrary to popular belief, is not simply random text. It has
+                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                </p>
+            </div>
+        </section>
+        <!-- choose us end -->
+        <!-- cause section -->
+        <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 justify-evenly">
+            <!-- left start-->
+            <div>
+                <div class="flex gap-4">
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">Dedicated Team</h2>
+                        <hr class="">
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+
+                </div>
+                <div class="flex gap-4">
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">Fresh is Best</h2>
+                        <hr>
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+
+                </div>
+                <div class="flex gap-4">
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">Gift Certificates</h2>
+                        <hr>
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+
+                </div>
+            </div>
+            <!-- left end -->
+            <!-- center start -->
+            <div>
+                <img src="./images/whychoose1.png" alt="fruits">
+            </div>
+            <!-- center end -->
+            <!-- right start-->
+            <div>
+                <div class="flex text-right gap-4">
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">Integrated Supplier</h2>
+                        <hr>
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+
+                </div>
+                <div class="flex text-right gap-4">
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">Sustainable Practice</h2>
+                        <hr>
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+
+                </div>
+                <div class="flex text-right gap-4">
+                    <div>
+                        <h2 class="text-2xl font-extrabold text-black my-7">The Benefits Only</h2>
+                        <hr>
+                        <p class="text-base font-medium text-[#121212]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-people-group my-7"></i></p>
+                    </div>
+
+                </div>
+            </div>
+            <!-- right end -->
+        </section>
+
+
 
 
 
 
     </main>
-    <footer>
-
+    <footer class="footer footer-center mt-10 p-10 bg-[#121212] text-white text-base-content rounded">
+        <div class="flex flex-col md:flex-row ">
+            <a href=""><img src="./images/logo.png" alt="logo"></a>
+            <h2 class="text-lg md:text-4xl font-extrabold">Fruit Burst</h2>
+        </div>
+        <div class="flex flex-col md:flex-row text-lg font-semibold gap-4">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Shop</a>
+            <a class="link link-hover">All Fruits</a>
+            <a class="link link-hover">Support</a>
+            <a class="link link-hover">My Account</a>
+        </div>
+        <div>
+            <div class="flex text-common-color cursor-pointer gap-4">
+                <a><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                <a><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a><i class="fa-brands fa-youtube fa-2xl"></i></a>
+                <a><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a><i class="fa-brands fa-apple fa-2xl"></i></a>
+            </div>
+        </div>
+        <div>
+            <p>Copyright © 2023 - All right reserved by Fruit Burst</p>
+        </div>
     </footer>
 
 </body>
